--- a/app/nunjucks/index.html
+++ b/app/nunjucks/index.html
@@ -17,7 +17,7 @@
 </section>
 <!-- ============================END hero ============================== -->
 <!-- ============================END sec-1 ============================== -->
-<section class="sec-1">
+<section class="sec-1 sec">
     <div class="container">
         <!-- block-1 -->
         <div class="block-1">
@@ -141,7 +141,7 @@
 </section>
 <!-- ============================END sec-2 ============================== -->
 <!-- ============================ sec-3 ============================== -->
-<section class="sec-3">
+<section class="sec-3 sec">
     <div class="container">
         <h2 class="sec-title">Гиперспектральные решения для исследований и промышленности.</h2>
         <div class="sec-3__items">
@@ -230,7 +230,7 @@
 </section>
 <!-- ============================END sec-4 ============================== -->
 <!-- ============================ sec-5 ============================== -->
-<section class="sec-5">
+<section class="sec-5 sec">
     <div class="container">
         <div class="sec-5__content">
             <h2 class="sec-title">Свяжитесь с нами</h2>
