--- a/app/nunjucks/Бортовая система дистанционного зондирования.html
+++ b/app/nunjucks/Бортовая система дистанционного зондирования.html
@@ -39,12 +39,12 @@
 </section>
 <!-- ============================END hero ============================== -->
 <!-- ============================ sec-16 ============================== -->
-<section class="sec-16">
+<section class="sec-16 sec">
     <div class="container">
         <h1 class="sec-title">Бортовая система дистанционного зондирования</h1>
         <div class="sec-16__content">
-            <div class="sec-16__content__video" style="background-image: url(img/sec-16-video.jpg);">
-                <img src="img/play.svg" class="sec-16__content__video__play" alt="">
+            <div class="videoblock" style="background-image: url(img/sec-16-video.jpg);">
+                <img src="img/play.svg" class="videoblock__play" alt="">
             </div>
             <div class="sec-16__content__text content-wp-editor">
                 <p>Воздушные гиперспектральные датчики Resonon представляют собой полностью интегрированные решения «под ключ» со всем аппаратным и программным обеспечением, необходимым для получения георегистрируемых гиперспектральных данных.</p>
@@ -66,7 +66,7 @@
 </section>
 <!-- ============================END sec-16 ============================== -->
 <!-- ============================ sec-17 ============================== -->
-<section class="sec-17">
+<section class="sec-17 sec gray">
     <div class="container">
         <div class="sec-17__content">
             <div class="sec-17__content__text">
@@ -86,7 +86,7 @@
 </section>
 <!-- ============================END sec-17 ============================== -->
 <!-- ============================ sec-11 ============================== -->
-<section class="sec-11">
+<section class="sec-11 sec">
     <div class="container">
         <h1 class="sec-title">Полная масса системы</h1>
         <table>
@@ -120,7 +120,7 @@
 </section>
 <!-- ============================END sec-11 ============================== -->
 <!-- ============================ sec-18 ============================== -->
-<section class="sec-18">
+<section class="sec-18 sec white">
     <div class="container">
         <h2 class="sec-title">Требования к питанию: 12 - 24 В; 13 - 16 Вт в рабочем состоянии, 23 Вт в пиковом режиме</h2>
         <div class="sec-18__desc">Питание может поступать от внешних аккумуляторов, от дрона или самолета.</div>
@@ -128,7 +128,7 @@
 </section>
 <!-- ============================END sec-18 ============================== -->
 <!-- ============================ sec-11 ============================== -->
-<section class="sec-11">
+<section class="sec-11 sec">
     <div class="container">
         <h1 class="sec-title">Полная масса системы</h1>
         <table>
@@ -156,5 +156,124 @@
     </div>
 </section>
 <!-- ============================END sec-11 ============================== -->
-
+<!-- ============================ sec-11 ============================== -->
+<section class="sec-11 sec gray">
+    <div class="container">
+        <h1 class="sec-title">Опции GPS / IMU</h1>
+        <table>
+            <tr>
+                <td></td>
+                <td><strong>Стандартный блок</strong></td>
+                <td><strong>Опция высокой точности (двойная антенна)</strong></td>
+            </tr>
+            <tr>
+                <td><strong>Точность, SBAS (м)</strong></td>
+                <td>0,6</td>
+                <td>0,6</td>
+            </tr>
+            <tr>
+                <td><strong>Точность, шаг (град.)</strong></td>
+                <td>0,2</td>
+                <td>0,1</td>
+            </tr>
+            <tr>
+                <td><strong>Точность, крен (град.)</strong></td>
+                <td>0,2</td>
+                <td>0,1</td>
+            </tr>
+            <tr>
+                <td><strong>Точность, направление (град.)</strong></td>
+                <td>0,2</td>
+                <td>0,1</td>
+            </tr>
+            <tr>
+                <td><strong>Вес (кг / фунты)</strong></td>
+                <td>0,05 / 0,10</td>
+                <td>0,18 / 0,40</td>
+            </tr>
+        </table>
+    </div>
+</section>
+<!-- ============================END sec-11 ============================== -->
+<!-- ============================ sec-13 ============================== -->
+<section class="sec-13 sec">
+    <div class="container">
+        <h2 class="sec-title">Поддержка</h2>
+        <div class="sec-13__docs__wrapper">
+            <div class="sec-13__docs__wrapper__col">
+                <div class="sec-13__desc">Документация для скачивания</div>
+                <ul class="sec-13__docs">
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                    </li>
+                </ul>
+                
+            </div>
+            <div class="sec-13__docs__wrapper__col">
+                <div class="sec-13__desc">Руководство пользователя</div>
+                <ul class="sec-13__docs">
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Руководство по бортовой гиперспектральной системе [pdf]</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Резюме бортовой постобработки [pdf] (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Бортовая радиометрия [pdf] (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Введение в обработку данных с помощью Spectronon [pdf]</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Создание обучающих наборов и использование регрессионного анализа в Spectronon [pdf] (рус. версия)</a>
+                    </li>
+                    <li class="doc">
+                        <div class="doc__icon"></div>
+                        <a href="" class="doc__title">Использование пакетного процессора [pdf] (рус. версия)</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
+    </div>
+</section>
+<!-- ============================END sec-13 ============================== -->
+<!-- ============================ sec-5 ============================== -->
+<section class="sec-5 sec">
+    <div class="container">
+        <div class="sec-5__content">
+            <h2 class="sec-title">Свяжитесь с нами</h2>
+            <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
+            <button class="btn">Свяжитесь с нами</button>
+        </div>
+        <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
+    </div>
+</section>
+<!-- ============================END sec-5 ============================== -->
 {% endblock %}
