--- a/app/nunjucks/Системы гиперспектральной визуализации.html
+++ b/app/nunjucks/Системы гиперспектральной визуализации.html
@@ -34,7 +34,7 @@
 </section>
 <!-- ============================END hero ============================== -->
 <!-- ============================ sec-14 ============================== -->
-<section class="sec-14">
+<section class="sec-14 sec">
     <div class="container">
         <div class="sec-14__items">
             <div class="sec-14__item">
@@ -66,7 +66,7 @@
 </section>
 <!-- ============================END sec-14 ============================== -->
 <!-- ============================ sec-15 ============================== -->
-<section class="sec-15">
+<section class="sec-15 sec gray">
     <div class="container">
         <div class="sec-15__content">
             <div class="sec-15__content__text">
@@ -104,7 +104,7 @@
 </section>
 <!-- ============================END sec-15 ============================== -->
 <!-- ============================ sec-5 ============================== -->
-<section class="sec-5">
+<section class="sec-5 sec">
     <div class="container">
         <div class="sec-5__content">
             <h2 class="sec-title">Свяжитесь с нами</h2>
