--- a/app/Гиперспектральное программное обеспечение.html
+++ b/app/Гиперспектральное программное обеспечение.html
@@ -94,194 +94,122 @@
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Pika L</h1>
-            <p class="hero__desc">Легкая и доступная гиперспектральная камера VNIR с <br> разрешением 400–1000 нм</p>
-            <div class="hero__btns">
-                <button class="btn white">Пример данных</button>
-                <button class="btn ">Руководство пользователя</button>
-            </div>
+            <h1 class="hero__title">Гиперспектральное программное обеспечение</h1>
         </div>
     </section>
     <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-9 ============================== -->
-    <section class="sec-9 sec">
+    <!-- ============================ sec-22 ============================== -->
+    <div class="sec-22 sec">
         <div class="container">
-            <div class="sec-9__content__wrapper">
-                <div class="sec-9__img" style="background-image: url(img/sec-9.png);"></div>
-                <div class="sec-9__text">
-                    <h1 class="sec-title">Pika L</h1>
-                    <p class="sec-9__desc">Легкая и доступная гиперспектральная камера VNIR с разрешением 400–1000 нм</p>
-                    <div class="sec-9__content">
-                        <p>Гиперспектральная камера Pika L - это экономичный, легкий и компактный формирователь изображения в видимой и ближней инфракрасной области (VNIR), охватывающий спектральный диапазон 400–1000 нм. </p>
-                        <p>Pika L весит всего 0,6 кг, что делает его идеальным для приложений дистанционного зондирования с помощью дронов (подробности см. На нашей веб-странице о бортовой гиперспектральной системе ) .</p>
-                        <p>Pika L также может использоваться с нашими лабораторными и наружными гиперспектральными системами .</p>
-                        <p>Во всех гиперспектральных камерах Resonon, включая Pika L, для получения изображений используется метод "выталкивания" (то есть линейного сканирования).</p>
-                        <p>Свяжитесь с нами для получения дополнительной информации.</p>
+            <div class="sec-22__content">
+                <div class="sec-22__img">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                </div>
+                <div class="sec-22__text">
+                    <h2 class="sec-title">Программное обеспечение Spectronon</h2>
+                    <div class="content-wp-editor">
+                        <p>Программное обеспечение Spectronon используется для управления Resonon в настольном и на открытом воздухе гиперспектральные систем визуализации. Включены многие инструменты обработки, анализа и визуализации данных, а также поддерживаются плагины, написанные пользователем.</p>
+                        <p>Spectronon доступен для бесплатной загрузки вместе с примерами гиперспектральных данных.</p>
+                        <p>Учебные материалы по анализу данных с помощью Spectronon доступны на нашей странице загрузок.</p>
+                    </div>
+                    <div class="sec-22__links">
+                        <a href="" class="link">Скачать Spectronon и образцы данных</a>
+                        <a href="" class="link">Свяжитесь с нами для получения дополнительной информации</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- ============================END sec-9 ============================== -->
-    <!-- ============================ sec-10 ============================== -->
-    <section class="sec-10 sec gray">
+    </div>
+    <!-- ============================END sec-22 ============================== -->
+    <!-- ============================ sec-22 ============================== -->
+    <div class="sec-22 sec white">
         <div class="container">
-            <div class="sec-10__content">
-                <div class="sec-10__text">
-                    <h1 class="sec-title">Фотографии и видео Pika L </h1>
-                    <p class="sec-10__desc">Легкая и доступная гиперспектральная камера VNIR с разрешением 400–1000 нм</p>
+            <div class="sec-22__content">
+                <div class="sec-22__img">
+                    <img src="img/sec-22.jpg" alt="">
                 </div>
-                <div class="sec-10__items">
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
+                <div class="sec-22__text">
+                    <h2 class="sec-title">Программное обеспечение Spectronon</h2>
+                    <div class="content-wp-editor">
+                        <p>Программное обеспечение Spectronon используется для управления Resonon в настольном и на открытом воздухе гиперспектральные систем визуализации. Включены многие инструменты обработки, анализа и визуализации данных, а также поддерживаются плагины, написанные пользователем.</p>
+                        <p>Spectronon доступен для бесплатной загрузки вместе с примерами гиперспектральных данных.</p>
+                        <p>Учебные материалы по анализу данных с помощью Spectronon доступны на нашей странице загрузок.</p>
+                    </div>
+                    <div class="sec-22__links">
+                        <a href="" class="link">Скачать Spectronon и образцы данных</a>
+                        <a href="" class="link">Свяжитесь с нами для получения дополнительной информации</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- ============================END sec-10 ============================== -->
-    <!-- ============================ sec-11 ============================== -->
-    <section class="sec-11 sec">
-        <div class="container">
-            <h1 class="sec-title">Характеристики</h1>
-            <table>
-                <tr>
-                    <td>Спектральный диапазон (нм)</td>
-                    <td>400–1000</td>
-                </tr>
-                <tr>
-                    <td>Спектральные каналы</td>
-                    <td>281</td>
-                </tr>
-                <tr>
-                    <td>Спектральная выборка (нм)</td>
-                    <td>2.1</td>
-                </tr>
-                <tr>
-                    <td>Спектральное разрешение - FWHM (нм)</td>
-                    <td>3.7</td>
-                </tr>
-                <tr>
-                    <td>Пространственные пиксели</td>
-                    <td>900</td>
-                </tr>
-                <tr>
-                    <td>Максимальная частота кадров (кадров в секунду)</td>
-                    <td>249</td>
-                </tr>
-                <tr>
-                    <td>f / #</td>
-                    <td>2,4</td>
-                </tr>
-                <tr>
-                    <td>Интерфейс</td>
-                    <td>USB 3.0</td>
-                </tr>
-                <tr>
-                    <td>Габаритные размеры (см)</td>
-                    <td>12,4 х 10,5 х 6,7</td>
-                </tr>
-                <tr>
-                    <td>Масса, с объективом (кг)</td>
-                    <td>0,75</td>
-                </tr>
-                <tr>
-                    <td>Глоссарий гиперспектральной терминологии</td>
-                    <td><a href="">кликните сюда</a></td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <!-- ============================END sec-11 ============================== -->
-    <!-- ============================ sec-12 ============================== -->
-    <section class="sec-12 sec gray">
-        <div class="container">
-            <h1 class="sec-title">Объективы для Pika L</h1>
-            <div class="sec-12__content">
-                <div class="sec-12__content__text">
-                    <table>
-                        <tr>
-                            <td><strong>Фокусное расстояние (мм)</strong></td>
-                            <td><strong>FOV (град.)</strong></td>
-                            <td><strong>FOV (град.)</strong></td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="sec-12__content__img" style="background-image: url(img/sec-12.jpg);"></div>
-            </div>
-        </div>
-    </section>
-    <!-- ============================END sec-12 ============================== -->
+    </div>
+    <!-- ============================END sec-22 ============================== -->
     <!-- ============================ sec-13 ============================== -->
     <section class="sec-13 sec">
         <div class="container">
             <h2 class="sec-title">Поддержка</h2>
-            <div class="sec-13__desc">Документация для скачивания</div>
-            <ul class="sec-13__docs">
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-            </ul>
+            <div class="sec-13__docs__wrapper">
+                <div class="sec-13__docs__wrapper__col">
+                    <div class="sec-13__desc">Документация для скачивания</div>
+                    <ul class="sec-13__docs">
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="sec-13__docs__wrapper__col">
+                    <div class="sec-13__desc">Руководство пользователя</div>
+                    <ul class="sec-13__docs">
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Руководство по бортовой гиперспектральной системе [pdf]</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Резюме бортовой постобработки [pdf] (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Бортовая радиометрия [pdf] (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Введение в обработку данных с помощью Spectronon [pdf]</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Создание обучающих наборов и использование регрессионного анализа в Spectronon [pdf] (рус. версия)</a>
+                        </li>
+                        <li class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Использование пакетного процессора [pdf] (рус. версия)</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
         </div>
     </section>
