--- a/app/Гиперспектральные камеры.html
+++ b/app/Гиперспектральные камеры.html
@@ -103,7 +103,7 @@
     </section>
     <!-- ============================END hero ============================== -->
     <!-- ============================ sec-6 ============================== -->
-    <section class="sec-6">
+    <section class="sec-6 sec">
         <div class="container">
             <div class="block-4">
                 <h2 class="sec-title">Наши камеры</h2>
@@ -156,7 +156,7 @@
     </section>
     <!-- ============================END sec-6 ============================== -->
     <!-- ============================ sec-7 ============================== -->
-    <section class="sec-7">
+    <section class="sec-7 sec gray">
         <div class="container">
             <div class="sec-7__items">
                 <div class="sec-7__text">
@@ -189,7 +189,7 @@
     </section>
     <!-- ============================END sec-7 ============================== -->
     <!-- ============================ sec-8 ============================== -->
-    <section class="sec-8">
+    <section class="sec-8 sec">
         <div class="container">
             <div class="sec-8__items">
                 <div class="sec-8__item">
@@ -242,7 +242,7 @@
     </section>
     <!-- ============================END sec-8 ============================== -->
     <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5">
+    <section class="sec-5 sec">
         <div class="container">
             <div class="sec-5__content">
                 <h2 class="sec-title">Свяжитесь с нами</h2>
