--- a/app/nunjucks/pika-l.html
+++ b/app/nunjucks/pika-l.html
@@ -40,7 +40,7 @@
 </section>
 <!-- ============================END hero ============================== -->
 <!-- ============================ sec-9 ============================== -->
-<section class="sec-9">
+<section class="sec-9 sec">
     <div class="container">
         <div class="sec-9__content__wrapper">
             <div class="sec-9__img" style="background-image: url(img/sec-9.png);"></div>
@@ -60,7 +60,7 @@
 </section>
 <!-- ============================END sec-9 ============================== -->
 <!-- ============================ sec-10 ============================== -->
-<section class="sec-10">
+<section class="sec-10 sec gray">
     <div class="container">
         <div class="sec-10__content">
             <div class="sec-10__text">
@@ -81,7 +81,7 @@
 </section>     
 <!-- ============================END sec-10 ============================== -->
 <!-- ============================ sec-11 ============================== -->
-<section class="sec-11">
+<section class="sec-11 sec">
     <div class="container">
         <h1 class="sec-title">Характеристики</h1>
         <table>
@@ -134,7 +134,7 @@
 </section>
 <!-- ============================END sec-11 ============================== -->
 <!-- ============================ sec-12 ============================== -->
-<section class="sec-12">
+<section class="sec-12 sec gray">
     <div class="container">
         <h1 class="sec-title">Объективы для Pika L</h1>
         <div class="sec-12__content">
@@ -188,34 +188,34 @@
 </section>
 <!-- ============================END sec-12 ============================== -->
 <!-- ============================ sec-13 ============================== -->
-<section class="sec-13">
+<section class="sec-13 sec">
     <div class="container">
         <h2 class="sec-title">Поддержка</h2>
         <div class="sec-13__desc">Документация для скачивания</div>
         <ul class="sec-13__docs">
-            <li class="sec-13__doc">
-                <div class="sec-13__doc__icon"></div>
-                <a href="" class="sec-13__doc__title">Каталог продукции Resonon (рус. версия)</a>
+            <li class="doc">
+                <div class="doc__icon"></div>
+                <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
             </li>
-            <li class="sec-13__doc">
-                <div class="sec-13__doc__icon"></div>
-                <a href="" class="sec-13__doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
+            <li class="doc">
+                <div class="doc__icon"></div>
+                <a href="" class="doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
             </li>
-            <li class="sec-13__doc">
-                <div class="sec-13__doc__icon"></div>
-                <a href="" class="sec-13__doc__title">Каталог продукции Resonon (рус. версия)</a>
+            <li class="doc">
+                <div class="doc__icon"></div>
+                <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
             </li>
-            <li class="sec-13__doc">
-                <div class="sec-13__doc__icon"></div>
-                <a href="" class="sec-13__doc__title">Каталог продукции Resonon (рус. версия)</a>
+            <li class="doc">
+                <div class="doc__icon"></div>
+                <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
             </li>
-            <li class="sec-13__doc">
-                <div class="sec-13__doc__icon"></div>
-                <a href="" class="sec-13__doc__title">Каталог продукции Resonon (рус. версия)</a>
+            <li class="doc">
+                <div class="doc__icon"></div>
+                <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
             </li>
-            <li class="sec-13__doc">
-                <div class="sec-13__doc__icon"></div>
-                <a href="" class="sec-13__doc__title">Каталог продукции Resonon (рус. версия)</a>
+            <li class="doc">
+                <div class="doc__icon"></div>
+                <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
             </li>
         </ul>
         <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
@@ -223,7 +223,7 @@
 </section>
 <!-- ============================END sec-13 ============================== -->
 <!-- ============================ sec-5 ============================== -->
-<section class="sec-5">
+<section class="sec-5 sec">
     <div class="container">
         <div class="sec-5__content">
             <h2 class="sec-title">Свяжитесь с нами</h2>
