--- a/app/nunjucks/Гиперспектральные камеры.html
+++ b/app/nunjucks/Гиперспектральные камеры.html
@@ -38,7 +38,7 @@
 </section>
 <!-- ============================END hero ============================== -->
 <!-- ============================ sec-6 ============================== -->
-<section class="sec-6">
+<section class="sec-6 sec">
     <div class="container">
         <div class="block-4">
             <h2 class="sec-title">Наши камеры</h2>
@@ -91,7 +91,7 @@
 </section>
 <!-- ============================END sec-6 ============================== -->
 <!-- ============================ sec-7 ============================== -->
-<section class="sec-7">
+<section class="sec-7 sec gray">
     <div class="container">
         <div class="sec-7__items">
             <div class="sec-7__text">
@@ -124,7 +124,7 @@
 </section>
 <!-- ============================END sec-7 ============================== -->
 <!-- ============================ sec-8 ============================== -->
-<section class="sec-8">
+<section class="sec-8 sec">
     <div class="container">
         <div class="sec-8__items">
             <div class="sec-8__item">
@@ -177,7 +177,7 @@
 </section>
 <!-- ============================END sec-8 ============================== -->
 <!-- ============================ sec-5 ============================== -->
-<section class="sec-5">
+<section class="sec-5 sec">
     <div class="container">
         <div class="sec-5__content">
             <h2 class="sec-title">Свяжитесь с нами</h2>
