--- a/app/База знаний.html
+++ b/app/База знаний.html
@@ -94,200 +94,133 @@
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Pika L</h1>
-            <p class="hero__desc">Легкая и доступная гиперспектральная камера VNIR с <br> разрешением 400–1000 нм</p>
-            <div class="hero__btns">
-                <button class="btn white">Пример данных</button>
-                <button class="btn ">Руководство пользователя</button>
-            </div>
+            <h1 class="hero__title">База знаний</h1>
+            <p class="hero__desc">Узнайте больше о гиперспектральной визуализации</p>
         </div>
     </section>
     <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-9 ============================== -->
-    <section class="sec-9 sec">
+    <!-- ============================ sec-25 ============================== -->
+    <section class="sec-25 sec white">
         <div class="container">
-            <div class="sec-9__content__wrapper">
-                <div class="sec-9__img" style="background-image: url(img/sec-9.png);"></div>
-                <div class="sec-9__text">
-                    <h1 class="sec-title">Pika L</h1>
-                    <p class="sec-9__desc">Легкая и доступная гиперспектральная камера VNIR с разрешением 400–1000 нм</p>
-                    <div class="sec-9__content">
-                        <p>Гиперспектральная камера Pika L - это экономичный, легкий и компактный формирователь изображения в видимой и ближней инфракрасной области (VNIR), охватывающий спектральный диапазон 400–1000 нм. </p>
-                        <p>Pika L весит всего 0,6 кг, что делает его идеальным для приложений дистанционного зондирования с помощью дронов (подробности см. На нашей веб-странице о бортовой гиперспектральной системе ) .</p>
-                        <p>Pika L также может использоваться с нашими лабораторными и наружными гиперспектральными системами .</p>
-                        <p>Во всех гиперспектральных камерах Resonon, включая Pika L, для получения изображений используется метод "выталкивания" (то есть линейного сканирования).</p>
-                        <p>Свяжитесь с нами для получения дополнительной информации.</p>
+            <h1 class="sec-title">Введение в гиперспектральную визуализацию</h1>
+            <div class="sec-25__content">
+                <div class="sec-25__content__text">
+                    <div class="content-wp-editor">
+                        <p>В то время как обычная камера записывает три спектральных канала в каждом пикселе (красный, зеленый и синий), гиперспектральные формирователи изображений могут записывать сотни спектральных каналов. Эта дополнительная информация позволяет различать материалы одного цвета. Примеры включают различие между здоровыми и подверженными стрессу культурами, орехами и скорлупой, аналогичными флуоресцентными материалами и т. Д.</p>
+                        <p>Гиперспектральные камеры Resonon - это формирователи изображений с линейной разверткой (также называемые формирователями изображений с «пушем»). Двумерные изображения создаются путем сбора изображения построчно, пока образец перемещается относительно камеры.</p>
+                    </div>
+                    <div class="links">
+                        <a href="" class="link">Введение в гиперспектральную визуализацию</a>
+                        <a href="" class="link">Глоссарий гиперспектральной терминологии</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <!-- ============================END sec-9 ============================== -->
-    <!-- ============================ sec-10 ============================== -->
-    <section class="sec-10 sec gray">
-        <div class="container">
-            <div class="sec-10__content">
-                <div class="sec-10__text">
-                    <h1 class="sec-title">Фотографии и видео Pika L </h1>
-                    <p class="sec-10__desc">Легкая и доступная гиперспектральная камера VNIR с разрешением 400–1000 нм</p>
-                </div>
-                <div class="sec-10__items">
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
-                    <div class="sec-10__item" style="background-image: url(img/sec-10.jpg);"></div>
+                <div class="sec-25__content__img">
+                    <img src="img/sec-25.png" alt="">
                 </div>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-10 ============================== -->
-    <!-- ============================ sec-11 ============================== -->
-    <section class="sec-11 sec">
+    <!-- ============================END sec-25 ============================== -->
+    <!-- ============================ sec-26 ============================== -->
+    <section class="sec-26 sec">
         <div class="container">
-            <h1 class="sec-title">Характеристики</h1>
-            <table>
-                <tr>
-                    <td>Спектральный диапазон (нм)</td>
-                    <td>400–1000</td>
-                </tr>
-                <tr>
-                    <td>Спектральные каналы</td>
-                    <td>281</td>
-                </tr>
-                <tr>
-                    <td>Спектральная выборка (нм)</td>
-                    <td>2.1</td>
-                </tr>
-                <tr>
-                    <td>Спектральное разрешение - FWHM (нм)</td>
-                    <td>3.7</td>
-                </tr>
-                <tr>
-                    <td>Пространственные пиксели</td>
-                    <td>900</td>
-                </tr>
-                <tr>
-                    <td>Максимальная частота кадров (кадров в секунду)</td>
-                    <td>249</td>
-                </tr>
-                <tr>
-                    <td>f / #</td>
-                    <td>2,4</td>
-                </tr>
-                <tr>
-                    <td>Интерфейс</td>
-                    <td>USB 3.0</td>
-                </tr>
-                <tr>
-                    <td>Габаритные размеры (см)</td>
-                    <td>12,4 х 10,5 х 6,7</td>
-                </tr>
-                <tr>
-                    <td>Масса, с объективом (кг)</td>
-                    <td>0,75</td>
-                </tr>
-                <tr>
-                    <td>Глоссарий гиперспектральной терминологии</td>
-                    <td><a href="">кликните сюда</a></td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <!-- ============================END sec-11 ============================== -->
-    <!-- ============================ sec-12 ============================== -->
-    <section class="sec-12 sec gray">
-        <div class="container">
-            <h1 class="sec-title">Объективы для Pika L</h1>
-            <div class="sec-12__content">
-                <div class="sec-12__content__text">
-                    <table>
-                        <tr>
-                            <td><strong>Фокусное расстояние (мм)</strong></td>
-                            <td><strong>FOV (град.)</strong></td>
-                            <td><strong>FOV (град.)</strong></td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                        <tr>
-                            <td>70</td>
-                            <td>4.3</td>
-                            <td>0,17</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="sec-12__content__img" style="background-image: url(img/sec-12.jpg);"></div>
+            <h2 class="sec-title">Отношение сигнал шум</h2>
+            <div class="links">
+                <a href="" class="link">Обсуждение отношения сигнал / шум для гиперспектральных формирователей изображений</a>
+                <a href="" class="link">Отношение сигнал / шум резононных гиперспектральных камер</a>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-12 ============================== -->
-    <!-- ============================ sec-13 ============================== -->
-    <section class="sec-13 sec">
+    <!-- ============================END sec-26 ============================== -->
+    <!-- ============================ sec-27 ============================== -->
+    <section class="sec-27 sec white">
         <div class="container">
-            <h2 class="sec-title">Поддержка</h2>
-            <div class="sec-13__desc">Документация для скачивания</div>
-            <ul class="sec-13__docs">
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-                <li class="doc">
-                    <div class="doc__icon"></div>
-                    <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                </li>
-            </ul>
-            <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
+            <div class="sec-27__content">
+                <div class="sec-27__content__text">
+                    <h2 class="sec-title">Публикации исследований</h2>
+                    <div class="content-wp-editor">
+                        <p>Журнальные статьи, описывающие исследования с использованием систем гиперспектральной съемки Resonon.</p>
+                    </div>
+                    <div class="links">
+                        <a href="" class="link">Щелкните здесь, чтобы просмотреть список публикаций, использующих системы Resonon.</a>
+                    </div>
+                </div>
+                <div class="sec-27__content__img">
+                    <img src="img/sec-26.jpg" alt="">
+                </div>
+            </div>
         </div>
     </section>
-    <!-- ============================END sec-13 ============================== -->
+    <!-- ============================END sec-27 ============================== -->
+    <!-- ============================ sec-28 ============================== -->
+    <section class="sec-28 sec white">
+        <div class="container">
+            <h2 class="sec-title">Обучающие видео</h2>
+            <div class="sec-28__items">
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+                <div class="sec-28__item">
+                    <div class="videoblock" style="background-image: url(img/sec-19-video.png);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-28__item__title">Фокусировка гиперспектральной камеры в настольной системе</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ============================END sec-28 ============================== -->
+    <!-- ============================END sec-23 ============================== -->
+    <div class="sec-23 sec">
+        <div class="container">
+            <h2 class="sec-title">Загрузки</h2>
+            <div class="content-wp-editor">
+                <p>Spectronon, наше программное обеспечение для гиперспектрального анализа и образцы данных доступны для бесплатной загрузки. Мы считаем, что свободный доступ к нашему гиперспектральному программному обеспечению будет способствовать развитию гиперспектральных изображений как важного инструмента для науки, техники и промышленности. </p>
+            </div>
+        </div>
+    </div>
+    <!-- ============================END sec-23 ============================== -->
     <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5 sec">
+    <section class="sec-5 sec white">
         <div class="container">
             <div class="sec-5__content">
                 <h2 class="sec-title">Свяжитесь с нами</h2>
