--- a/app/Гиперспектральные приложения.html
+++ b/app/Гиперспектральные приложения.html
@@ -70,7 +70,7 @@
     </section>
     <!--==========================END header ==========================-->
     <!-- ============================ hero ============================== -->
-    <section class="hero" style="background-image: url(img/hero.jpg);">
+    <section class="hero" style="background-image: url(img/pika-l.jpg);">
         <div class="container">
             <div class="breadcrumbs">
                 <!-- Breadcrumb NavXT 6.6.0 -->
@@ -89,85 +89,68 @@
                 </span>
                 <span> » </span>
                 <span property="itemListElement" typeof="ListItem">
-                    <span property="name" class="post post-objects current-item">Капитальный ремонт Казанской ТЭЦ-1</span>
+                    <span property="name" class="post post-objects current-item">Pika L</span>
                     <meta property="url" content="https://altius-rf.ru/objects/kapitalnyj-remont-kazanskoj-tjec-1">
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Системы гиперспектральной визуализации</h1>
+            <h1 class="hero__title">Гиперспектральные приложения</h1>
         </div>
     </section>
     <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-14 ============================== -->
-    <section class="sec-14 sec">
+    <!-- ============================ sec-23 ============================== -->
+    <div class="sec-23 sec gray">
         <div class="container">
-            <div class="sec-14__items">
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Бортовая система дистанционного зондирования</h2>
-                        <div class="sec-14__item__desc">Полные пакеты датчиков для получения георекламированных гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Система открытого поля</h2>
-                        <div class="sec-14__item__desc">Портативная гиперспектральная система на штативе для наружных измерений.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Настольная система - комбинированное отражение / передача</h2>
-                        <div class="sec-14__item__desc">Лабораторная система для измерения как отражательной способности, так и передачи гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
+            <h2 class="sec-title">Приложения</h2>
+            <div class="content-wp-editor">
+                <p>Гиперспектральные системы Resonon позволяют точно и последовательно различать похожие цвета или материалы. Наши системы используются во всем мире на платформах, от самолетов до микроскопов. Как показывают следующие примеры, наши решения решают широкий спектр проблем.</p>
             </div>
         </div>
-    </section>
-    <!-- ============================END sec-14 ============================== -->
-    <!-- ============================ sec-15 ============================== -->
-    <section class="sec-15 sec gray">
+    </div>
+    <!-- ============================END sec-23 ============================== -->
+    <!-- ============================ sec-24 ============================== -->
+    <div class="sec-24 sec">
         <div class="container">
-            <div class="sec-15__content">
-                <div class="sec-15__content__text">
-                    <h2 class="sec-title">Сцены и освещение</h2>
-                    <div class="sec-15__desc">Доступны индивидуальные конфигурации. Свяжитесь с нами, чтобы обсудить ваши требования. </div>
+            <h2 class="sec-title">Точное земледелие</h2>
+            <div class="content-wp-editor">
+                <p>Программное обеспечение воздушного дистанционного зондирования Resonon управляет бортовой системой во время полета и предоставляет инструменты постобработки для коррекции яркости и георектификации.</p>
+            </div>
+            <div class="sec-24__items">
+                <div class="sec-24__item">
+                    <div class="sec-24__item__img__wrapper">
+                        <div class="sec-24__item__img" style="background-image: url(img/sec-24-item.png);"></div>
+                    </div>
+                    <div class="sec-24__item__text">
+                        <div class="sec-24__item__titlebefore">Пример применения</div>
+                        <div class="sec-24__item__title">Картирование инвазивных сорняков</div>
+                        <div class="content-wp-editor">
+                            <p>Для выявления и обнаружения инвазивного заражения сорняками использовалась система воздушной гиперспектральной визуализации Resonon.</p>
+                            <p>Опубликовано в: <strong>SC Jay et al., Симпозиум по геонаукам и дистанционному зондированию (IGARSS) (2010) .</strong></p>
+                        </div>
+                        <div class="doc">
+                            <div class="doc__icon"></div>
+                            <a href="" class="doc__title">Скачать полное исследование</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="sec-15__content__items">
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
+                <div class="sec-24__item">
+                    <div class="sec-24__item__img__wrapper">
+                        <div class="sec-24__item__img" style="background-image: url(img/sec-24-item-2.png);"></div>
                     </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
+                    <div class="sec-24__item__text">
+                        <div class="sec-24__item__titlebefore">Пример применения</div>
+                        <div class="sec-24__item__title">Картирование инвазивных сорняков</div>
+                        <div class="content-wp-editor">
+                            <p>Для выявления и обнаружения инвазивного заражения сорняками использовалась система воздушной гиперспектральной визуализации Resonon.</p>
+                            <p>Опубликовано в: <strong>SC Jay et al., Симпозиум по геонаукам и дистанционному зондированию (IGARSS) (2010) .</strong></p>
                         </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
+                        <a href="" class="btn-link">Подробнее</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- ============================END sec-15 ============================== -->
+    </div>
+    <!-- ============================END sec-24 ============================== -->
     <!-- ============================ sec-5 ============================== -->
     <section class="sec-5 sec">
         <div class="container">
