--- a/app/Публикации исследований.html
+++ b/app/Публикации исследований.html
@@ -70,7 +70,7 @@
     </section>
     <!--==========================END header ==========================-->
     <!-- ============================ hero ============================== -->
-    <section class="hero" style="background-image: url(img/hero.jpg);">
+    <section class="hero" style="background-image: url(img/pika-l.jpg);">
         <div class="container">
             <div class="breadcrumbs">
                 <!-- Breadcrumb NavXT 6.6.0 -->
@@ -89,97 +89,32 @@
                 </span>
                 <span> » </span>
                 <span property="itemListElement" typeof="ListItem">
-                    <span property="name" class="post post-objects current-item">Капитальный ремонт Казанской ТЭЦ-1</span>
+                    <span property="name" class="post post-objects current-item">Pika L</span>
                     <meta property="url" content="https://altius-rf.ru/objects/kapitalnyj-remont-kazanskoj-tjec-1">
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Системы гиперспектральной визуализации</h1>
+            <h1 class="hero__title">Публикации исследований</h1>
         </div>
     </section>
     <!-- ============================END hero ============================== -->
-    <!-- ============================ sec-14 ============================== -->
-    <section class="sec-14 sec">
+    <!-- ============================ sec-29 ============================== -->
+    <section class="sec-29 sec white">
         <div class="container">
-            <div class="sec-14__items">
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Бортовая система дистанционного зондирования</h2>
-                        <div class="sec-14__item__desc">Полные пакеты датчиков для получения георекламированных гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Система открытого поля</h2>
-                        <div class="sec-14__item__desc">Портативная гиперспектральная система на штативе для наружных измерений.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
-                <div class="sec-14__item">
-                    <div class="sec-14__item__text">
-                        <h2 class="sec-title">Настольная система - комбинированное отражение / передача</h2>
-                        <div class="sec-14__item__desc">Лабораторная система для измерения как отражательной способности, так и передачи гиперспектральных данных.</div>
-                        <a href="" class="btn-link">Подробнее</a>
-                    </div>
-                    <div class="sec-14__item__img" style="background-image: url(img/sec-14.png);"></div>
-                </div>
+            <h2 class="sec-title">Публикации</h2>
+            <div class="content-wp-editor">
+                <p>Ниже приведены научные статьи, описывающие исследования с использованием гиперспектральных систем "Резонон".</p>
+            </div>
+            <div class="sec-29__links">
+                <a href="" class="link">Гиперспектральная визуализация: общие сведения</a>
+                <a href="" class="link">Гиперспектральное дистанционное зондирование с воздуха</a>
+                <a href="" class="link">Сельское хозяйство и пищевые технологии</a>
+                <a href="" class="link">Биотехнологии</a>
+                <a href="" class="link">Мониторинг окружающей среды</a>
             </div>
         </div>
     </section>
-    <!-- ============================END sec-14 ============================== -->
-    <!-- ============================ sec-15 ============================== -->
-    <section class="sec-15 sec gray">
-        <div class="container">
-            <div class="sec-15__content">
-                <div class="sec-15__content__text">
-                    <h2 class="sec-title">Сцены и освещение</h2>
-                    <div class="sec-15__desc">Доступны индивидуальные конфигурации. Свяжитесь с нами, чтобы обсудить ваши требования. </div>
-                </div>
-                <div class="sec-15__content__items">
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                    <div class="sec-15__content__item">
-                        <div class="sec-15__content__item__img" style="background-image: url(img/sec-15.png);"></div>
-                        <div class="sec-15__content__item__text">
-                            <div class="sec-15__content__item__title">Этап линейного сканирования</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ============================END sec-15 ============================== -->
-    <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5 sec">
-        <div class="container">
-            <div class="sec-5__content">
-                <h2 class="sec-title">Свяжитесь с нами</h2>
-                <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
-                <button class="btn">Свяжитесь с нами</button>
-            </div>
-            <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
-        </div>
-    </section>
-    <!-- ============================END sec-5 ============================== -->
+    <!-- ============================END sec-29 ============================== -->
     <!--========================== footer ==========================-->
     <section class="footer">
         <div class="footer__top">
