--- a/app/Системы-Система открытого поля.html
+++ b/app/Системы-Система открытого поля.html
@@ -94,11 +94,11 @@
                     <meta property="position" content="3">
                 </span>
             </div>
-            <h1 class="hero__title">Бортовая система дистанционного зондирования</h1>
-            <p class="hero__desc">Георегистрируемые данные гиперспектрального дистанционного зондирования</p>
+            <h1 class="hero__title">Система открытого поля</h1>
+            <p class="hero__desc">Портативная система гиперспектральной визуализации</p>
             <div class="hero__btns">
-                <button class="btn white">Пример данных</button>
-                <button class="btn ">Руководство пользователя</button>
+                <button class="btn ">Пример данных</button>
+                <button class="btn white">Обучающие видео</button>
             </div>
         </div>
     </section>
@@ -107,15 +107,20 @@
     <section class="sec-16 sec">
         <div class="container">
             <h1 class="sec-title">Бортовая система дистанционного зондирования</h1>
+            <p class="sec-16-desc">Портативная система гиперспектральной визуализации</p>
             <div class="sec-16__content">
-                <div class="videoblock" style="background-image: url(img/sec-16-video.jpg);">
-                    <img src="img/play.svg" class="videoblock__play" alt="">
+                <div class="sec-16__content__left">
+                    <div class="videoblock" style="background-image: url(img/sec-16-video.jpg);">
+                        <img src="img/play.svg" class="videoblock__play" alt="">
+                    </div>
+                    <div class="sec-16__content__img" style="background-image: url(img/sec-16-img.png);"></div>
                 </div>
                 <div class="sec-16__content__text content-wp-editor">
-                    <p>Воздушные гиперспектральные датчики Resonon представляют собой полностью интегрированные решения «под ключ» со всем аппаратным и программным обеспечением, необходимым для получения георегистрируемых гиперспектральных данных.</p>
-                    <p>Системы могут быть оснащены любой из <strong>гиперспектральных камер Resonon</strong> , охватывающих спектральный диапазон 350–1700 нм. </p>
-                    <p>Бортовые системы могут быть установлены как на пилотируемых, так и на беспилотных летательных аппаратах. Масса полезной нагрузки начинается от 1,55 кг. <strong>Свяжитесь с нами</strong>, чтобы обсудить интеграцию с вашим дроном или платформой дистанционного зондирования.</p>
-                    <h4>Системные компоненты:</h4>
+                    <p>Наша наружная система используется для получения гиперспектральных данных в тех областях, где мобильность является критически важной. Гиперспектральная камера Resonon с нажимными щетками устанавливается на поворотный столик на специально модифицированном штативе. Во время сбора данных сцена вращает гиперспектральную камеру, просматривая интересующую сцену. Тепловизор и столик управляются с помощью программного обеспечения Spectronon.</p>
+                    <p>Необработанные гиперспектральные данные преобразуются в яркость и отражательную способность с использованием данных радиометрической калибровки и калибровочного стандарта, помещенного в сцену. Эталон калибровки представляет собой специальный брезент с известной (в основном плоской) отражательной способностью. Эти операции можно выполнить с помощью программного обеспечения Spectronon.</p>
+                    <p>Системы Resonon - это готовые к немедленному использованию решения под ключ, включая все оборудование и программное обеспечение, необходимое для сбора и анализа гиперспектральных данных.</p>
+                    <p>Наружные системы могут быть оснащены любой гиперспектральной камерой Resonon, охватывающей спектральный диапазон 350–1700 нм. </p>
+                    <h5>Системные компоненты:</h5>
                     <ul>
                         <li>Гиперспектральная камера</li>
                         <li>Объектив</li>
@@ -124,7 +129,6 @@
                         <li>GPS / IMU - для записи положения и ориентации датчика</li>
                         <li>Программное обеспечение для георекламы - для корректировки информации GPS / IMU</li>
                     </ul>
-                    <a href="" class="btn">Паспорт бортовой системы</a>
                 </div>
             </div>
         </div>
@@ -135,7 +139,8 @@
         <div class="container">
             <div class="sec-17__content">
                 <div class="sec-17__content__text">
-                    <h2 class="sec-title">Фотографии бортовых систем гиперспектральной съемки</h2>
+                    <h2 class="sec-title">Фотографии Outdoor Field System</h2>
+                    <div class="sec-17__content__text__desc">Портативная система гиперспектральной визуализации</div>
                 </div>
                 <div class="sec-17__content__items">
                     <div class="sec-17__content__item" style="background-image: url(img/sec-17-item.jpg);"></div>
@@ -153,7 +158,7 @@
     <!-- ============================ sec-11 ============================== -->
     <section class="sec-11 sec">
         <div class="container">
-            <h1 class="sec-title">Полная масса системы</h1>
+            <h1 class="sec-title">Характеристики</h1>
             <table>
                 <tr>
                     <td>Камера</td>
@@ -184,162 +189,6 @@
         </div>
     </section>
     <!-- ============================END sec-11 ============================== -->
-    <!-- ============================ sec-18 ============================== -->
-    <section class="sec-18 sec white">
-        <div class="container">
-            <h2 class="sec-title">Требования к питанию: 12 - 24 В; 13 - 16 Вт в рабочем состоянии, 23 Вт в пиковом режиме</h2>
-            <div class="sec-18__desc">Питание может поступать от внешних аккумуляторов, от дрона или самолета.</div>
-        </div>
-    </section>
-    <!-- ============================END sec-18 ============================== -->
-    <!-- ============================ sec-11 ============================== -->
-    <section class="sec-11 sec">
-        <div class="container">
-            <h1 class="sec-title">Полная масса системы</h1>
-            <table>
-                <tr>
-                    <td><strong>Датчик освещенности нисходящего потока</strong></td>
-                    <td>
-                        <img src="img/table.png" alt="">
-                    </td>
-                    <td>Точечный спектрометр, ориентированный вверх, для контроля солнечного освещения во время полета.</td>
-                </tr>
-                <tr>
-                    <td><strong>Калибровочные грунтовые брезенты</strong></td>
-                    <td>
-                        <img src="img/table.png" alt="">
-                    </td>
-                    <td>Тканевые брезенты с известной отражательной способностью, используемые в качестве калибровочного стандарта. Размещено в интересующем месте.</td>
-                </tr>
-                <tr>
-                    <td><strong>Радиометрическая калибровка</strong></td>
-                    <td>
-                    </td>
-                    <td>Лабораторное измерение абсолютного отклика тепловизора. Используется во время постобработки данных для преобразования необработанных данных в сияние.</td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <!-- ============================END sec-11 ============================== -->
-    <!-- ============================ sec-11 ============================== -->
-    <section class="sec-11 sec gray">
-        <div class="container">
-            <h1 class="sec-title">Опции GPS / IMU</h1>
-            <table>
-                <tr>
-                    <td></td>
-                    <td><strong>Стандартный блок</strong></td>
-                    <td><strong>Опция высокой точности (двойная антенна)</strong></td>
-                </tr>
-                <tr>
-                    <td><strong>Точность, SBAS (м)</strong></td>
-                    <td>0,6</td>
-                    <td>0,6</td>
-                </tr>
-                <tr>
-                    <td><strong>Точность, шаг (град.)</strong></td>
-                    <td>0,2</td>
-                    <td>0,1</td>
-                </tr>
-                <tr>
-                    <td><strong>Точность, крен (град.)</strong></td>
-                    <td>0,2</td>
-                    <td>0,1</td>
-                </tr>
-                <tr>
-                    <td><strong>Точность, направление (град.)</strong></td>
-                    <td>0,2</td>
-                    <td>0,1</td>
-                </tr>
-                <tr>
-                    <td><strong>Вес (кг / фунты)</strong></td>
-                    <td>0,05 / 0,10</td>
-                    <td>0,18 / 0,40</td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <!-- ============================END sec-11 ============================== -->
-    <!-- ============================ sec-13 ============================== -->
-    <section class="sec-13 sec">
-        <div class="container">
-            <h2 class="sec-title">Поддержка</h2>
-            <div class="sec-13__docs__wrapper">
-                <div class="sec-13__docs__wrapper__col">
-                    <div class="sec-13__desc">Документация для скачивания</div>
-                    <ul class="sec-13__docs">
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Технические данные гиперспектральной камеры Pika L (англ. версия) </a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Каталог продукции Resonon (рус. версия)</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="sec-13__docs__wrapper__col">
-                    <div class="sec-13__desc">Руководство пользователя</div>
-                    <ul class="sec-13__docs">
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Руководство по бортовой гиперспектральной системе [pdf]</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Резюме бортовой постобработки [pdf] (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Бортовая радиометрия [pdf] (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Введение в обработку данных с помощью Spectronon [pdf]</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Создание обучающих наборов и использование регрессионного анализа в Spectronon [pdf] (рус. версия)</a>
-                        </li>
-                        <li class="doc">
-                            <div class="doc__icon"></div>
-                            <a href="" class="doc__title">Использование пакетного процессора [pdf] (рус. версия)</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <a href="" class="btn-link sec-13__btn-link">Просмотреть все статьи поддержки</a>
-        </div>
-    </section>
-    <!-- ============================END sec-13 ============================== -->
-    <!-- ============================ sec-5 ============================== -->
-    <section class="sec-5 sec">
-        <div class="container">
-            <div class="sec-5__content">
-                <h2 class="sec-title">Свяжитесь с нами</h2>
-                <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
-                <button class="btn">Свяжитесь с нами</button>
-            </div>
-            <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
-        </div>
-    </section>
-    <!-- ============================END sec-5 ============================== -->
     <!--========================== footer ==========================-->
     <section class="footer">
         <div class="footer__top">
